# NovelMind

./: .env.example  .gitignore  LICENSE  PROJECT_PLAN.md  README.md  README_SHORT.md  USAGE.md  index.html  installer.iss  list_novels.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
backend/: .env.example  README.md  config.py  constants.py  main.py  novelmind.spec  pyproject.toml  requirements.txt  test_neo4j.py
backend/api/: analysis.py  characters.py  export.py  novels.py  relationships.py  settings.py
backend/database/: neo4j_db.py  sqlite_db.py
backend/llm/: __init__.py  providers.py
backend/models/: chapter.py  character.py  novel.py  relationship.py
backend/prompts/: character_extraction.py  plot_analysis.py  relationship_analysis.py  summary_generation.py
backend/services/: analysis_engine.py  export_service.py  file_parser.py  graph_builder.py  graph_service.py  llm_service.py  settings_service.py
backend/utils/: encoding_utils.py  json_utils.py  logger.py  text_utils.py
electron/: main.ts  preload.ts
scripts/: afterPack.js  build-backend.js  generate_icon.py  setup-neo4j.bat
src/: App.vue  components.d.ts  main.ts  vite-env.d.ts
src/api/: index.ts
src/components/: ProviderAvatar.vue
src/composables/: useAnalysisTask.ts  useECharts.ts  useExport.ts  useNovelSelection.ts
src/config/: providers.ts
src/router/: index.ts
src/stores/: analysis.ts  novel.ts  settings.ts
src/types/: index.ts
src/utils/: format.ts  relations.ts  status.ts
src/views/: GraphView.vue  (+6 more)
(+19 files in other folders)
