[project]
name = "novelmind-backend"
version = "0.0.1"
description = "NovelMind Backend - AI-powered novel analysis engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "networkx>=3.2.1",
    "litellm>=1.30.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "chardet>=5.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "cryptography>=42.0.0",
    "loguru>=0.7.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "config.py",
    "api",
    "database",
    "models",
    "services",
    "prompts",
    "utils",
    "llm"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
